      in quick succession.

      rlwrap didn't delete the tempfiles used in a multi-line
      edit

      configure.ac now works even when cross-compiling (skipping some
      tests, but providing sensible defaults)

      --enable-pedantic-ansi is a new configure option separate from
      --enable-debug (it used to be implied by --enable-debug)
      
0.42  Added --mirror-arguments (-U) option 

      On SunOS tcgetattr(slave pty) failed with "Invalid argument" 

      If the completion list contained two words, one of which a
      prefix of the other (e.g. "sea" and "seagull") the shorter one would
      be skipped when displaying a list of completions

      reading completion files (with the -f option, or from
      $RLWRAP_HOME/<command>_completions) could fail with an incorrect
      ENOENT ("No such file or directory")

      rlwrap -z listing wouldn't list filters
      
      When both master and slave pty are unfit for sensing slave
      commands terminal settings, rlwrap now bails out with an error
      "cannot determine terminal mode of slave command"


0.41  Slightly late SIGCHLD could cause an I/O error on master pty

      Added -W (-polling) option to poll slave pty for changes in its 
      interrupt character and ISIG flag.

      if $TERM is not found in termcap/terminfo database, use vt100

0.40  configure will now find tgetent() in libtinfo 

      compiling with gcc -O2 made rlwrap hang after CTRL-D on empty line
      
      HP-UX 11 has weird tgetent() return values, confusing rlwrap 

      On Solaris, rlwrap would sometimes fail with "TIOCSWINSZ failed on 
      slave pty"
   
      Single quote ' is now word-breaking by default 

      multi-line edit would mangle upper ASCII and UTF-8 (and still does 
      that to UTF16 :( ) 

      added --extra-char-after-completion and -multi-line-ext options

      rlwrap now recognises the 'rmcup' and 'rmkx' character sequences used by 